# cntfet-tcad-g4

geant4/: CMakeLists.txt
geant4/include/: CNTFETActionInitialization.hh  CNTFETDetectorConstruction.hh  CNTFETEventAction.hh  CNTFETPhysicsList.hh  CNTFETPrimaryGeneratorAction.hh  CNTFETRunAction.hh  CNTFETSteppingAction.hh
geant4/src/: CNTFETActionInitialization.cc  CNTFETDetectorConstruction.cc  CNTFETEventAction.cc  CNTFETPhysicsList.cc  CNTFETPrimaryGeneratorAction.cc  CNTFETRunAction.cc  CNTFETSteppingAction.cc  cntfet_dosimetry.cc
scripts/: extract_3config_tid.py  generate_3config_sdevice.py  plot_3config_tid.py
spice/: run_sram_tid.py
spice/src/: sram_configA_tid0_snm_hold.cir  sram_configA_tid0_snm_read.cir  sram_configA_tid10000_snm_hold.cir  sram_configA_tid10000_snm_read.cir  sram_configA_tid10000_write.cir  sram_configA_tid1000_snm_hold.cir  sram_configA_tid1000_snm_read.cir  sram_configA_tid1000_write.cir  sram_configA_tid100_snm_hold.cir  sram_configA_tid100_snm_read.cir  sram_configA_tid100_write.cir  sram_configA_tid5000_snm_hold.cir  sram_configA_tid5000_snm_read.cir  sram_configA_tid5000_write.cir  sram_configA_tid500_snm_hold.cir  sram_configA_tid500_snm_read.cir  sram_configA_tid500_write.cir  sram_configB_tid0_snm_hold.cir  sram_configB_tid0_snm_read.cir  sram_configB_tid0_write.cir  sram_configB_tid10000_snm_hold.cir  sram_configB_tid10000_snm_read.cir  sram_configB_tid10000_write.cir  sram_configB_tid1000_snm_hold.cir  sram_configB_tid1000_snm_read.cir  sram_configB_tid1000_write.cir  sram_configB_tid100_snm_hold.cir  (+44 more)
tcad/par/: models.par  (+4 more)
(+63 files in other folders)
